# base_templates

./: .env_sample  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
apps/base/: constants.py  decorators.py  dto.py  exceptions.py  models.py  schema.py  typing.py
apps/base/repositories/: __init__.py  abstract.py  base.py  container.py  human.py  typing.py
apps/base/servic_layer/: abstract.py  factory.py
code_quality/: .ruff.toml  mypy.ini  pylint.toml
core/: celery.py  logger.py  settings.py  urls.py  wsgi.py
core/settings/: __init__.py  base.py  celery.py  drf.py  local.py  logger_config.py  prod.py  redis.py  sentry.py
docker_files/: docker-compose.full.yml  docker-compose.postgres.yml  docker-compose.yml
requirements/: requirements.txt  requirements_dev
tests/base/: conftest.py  test_base_playwright_repository.py  test_base_playwright_repository_extended.py  test_decorators.py  test_dto.py  test_human_playwright_repository.py  test_repositories.py
