[project]
name = "Add your name here"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorlog==6.10.1",
    "dill==0.4.1",
    "pyyaml==6.0.3",
]

[dependency-groups]
dev = [
    "isort==8.0.0",
    "mypy==1.19.1",
    "pre-commit==4.5.1",
    "pylint==4.0.5",
    "pytest-asyncio==1.3.0",
    "pytest==9.0.2",
    "ruff==0.15.2",
    "pre-commit>=4.5.1",

]
