[project]
name = "ScraperAi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref==3.11.1",
    "colorlog==6.10.1",
    "dill==0.4.1",
    "Django==6.0.3",
    "django-debug-toolbar==6.2.0",
    "django-environ==0.13.0",
    "django-extensions==4.1",
    "pyyaml==6.0.3",
    "psycopg2-binary==2.9.11",
    "sqlparse==0.5.5",
]

[dependency-groups]
dev = [
    "django-stubs==5.2.0",
    "isort==8.0.0",
    "mypy==1.19.1",
    "pre-commit==4.5.1",
    "pylint==4.0.5",
    "pytest==9.0.2",
    "ruff==0.15.2",
    "pre-commit>=4.5.1",

]
