[project]
name = "ScraperAi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref==3.11.1",
    "celery==5.5.0",
    "flower==2.0.1",
    "colorlog==6.10.1",
    "dill==0.4.1",
    "Django==5.2.12",
    "django-celery-beat==2.8.0",
    "django-celery-results==2.5.1",
    "django-debug-toolbar==6.2.0",
    "django-environ==0.13.0",
    "django-extensions==4.1",
    "psycopg2-binary==2.9.11",
    "pyyaml==6.0.3",
    "redis==5.2.1",
    "sqlparse==0.5.5",
]

[dependency-groups]
dev = [
    "django-stubs==5.2.9",
    "isort==8.0.1",
    "mypy==1.19.1",
    "pre-commit==4.5.1",
    "pylint==4.0.5",
    "pytest==9.0.2",
    "ruff==0.15.5",
    "types-pyyaml==6.0.12.20250915",
]
